@@ -6,6 +6,7 @@ Date: ???
     - Marked Alien Biomes mod as incompatible #263
     - Marked Angel's Exploration mod as incompatible #264
   Bugfixes:
+    - Fixed tech unlocks after adding Science Cost Tweaker mod mid game #260
     - Fixed duplicate starting items in rock-chest as well as player inventory #268
     - Basic Chemistry 2 tech missing green science #269
     - Fixed setting "SpaceX ignore tech price multiplier" #273
